2006-04-03  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/boehm-gc/boehm/cord/de.c,
	libraries/clib/target/generic/target_generic.h,
	libraries/clib/target/generic/target_generic_misc.h:
	Fixed remaining pscan warnings.

2006-04-03  Dalibor Topic  <robilad@kaffe.org>

	* THIRDPARTY: Updated fastjar to gcc 4.1.0.

	* external/gcc/fastjar: Updated to 4.1.0.

2006-04-03  Dalibor Topic  <robilad@kaffe.org>

        * Resynchronized GNU Classpath.

2006-04-03  Dalibor Topic  <robilad@kaffe.org>

	* THIRDPARTY: Updated to boehm-gc 6.7

	* kaffe/kaffevm/boehm-gc/boehm/ : Updated to boehm-gc 6.7.
	All regression tests pass now with boehm-gc/jit3/pthreads 
	on x86-linux.

2006-04-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/vmspecific/java/lang/reflect/Array.java,
	libraries/clib/native/Array.c: Removed.

	* libraries/javalib/vmspecific/java/lang/reflect/Constructor.java
	libraries/javalib/vmspecific/java/lang/reflect/Field.java
	libraries/javalib/vmspecific/java/lang/reflect/Method.java:
	Added missing methods from GNU Classpath.

	* libraries/javalib/vmspecific/java/lang/reflect/VMArray.java
	libraries/clib/native/java_lang_reflect_VMArray.c: New files,
	taken from GNU Classpath.

	* include/Makefile.am: Don't generate include file for Array.

	* libraries/clib/native/Makefile.am: Removed Array.c. Added 
	java_lang_reflect_VMArray.c.

        * Resynchronized GNU Classpath.

2006-04-02  Dalibor Topic  <robilad@kaffe.org>

	Fix for #32.

	* configure.ac: Make --disable-native-awt disable GNU Classpath's
	gtk peer as well.

2006-04-01  Kiyo Inaba <inaba@src.ricoh.co.jp>

	Really fix for #31.

	* kaffe/kaffevm/intrp/methodcalls.c: Reorder the variables
	declaration compatible with older C syntax.

2006-04-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/kaffe.def
	(PUTFIELD, PUTSTATIC): Updated semantic to follow JDK 1.5 behaviour.

	* libraries/javalib/vmspecific/java/lang/reflect/Field.java