@@ -1,3 +1,9 @@
+2006-04-05  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/clib/zip/Adler32.c (java_util_zip_Adler32_update1) 
+	(java_util_zip_Adler32_update): Added explicit casts to fix
+	compiler warnings.
+
 2006-04-03  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/kaffevm/boehm-gc/boehm/cord/de.c,
